--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.1",
     "quasar": "^2.16.0",
     "vue": "3.5.20",
     "vue-router": "^4.0.12"
